# nao_igm

./: CMakeLists.txt  Doxyfile  LICENSE  Makefile  README  README.markdown  README.textile
c_sources/: JacCoM.c  JacCoM_a.c  Leg2EE.c  RLeg2JointsEE.c  from_LLeg_1.c  from_LLeg_1_new.c  from_LLeg_3.c  from_LLeg_3_new.c  from_LLeg_3_no_torso_rotation.c  from_RLeg_1_new.c  from_RLeg_2.c  from_RLeg_3.c  maple_functions.h
include/: joints_sensors_id.h  leg2joints.h  maple_functions.h  nao.h  nao_igm.h  posture_orientation.h  public_maple_functions.h
lib/: README
maple_sources/: JacobianCoM.mpl  Leg2EE_new.mpl  Leg2JointsEE.mpl  Leg2JointsEE_new.mpl  Readme_M.txt  from_LLeg_1_new.mpl  from_LLeg_4.mpl  from_LLeg_4_new.mpl  from_RLeg_4_new.mpl  kinematics.mpl  model_NAO.mpl
nao_model/: LLeg2JointsEE.c  Leg2EE.c  Leg2EE_new.c  Makefile  RLeg2JointsEE_new.c  from_LLeg_2.c  from_LLeg_3.c  from_LLeg_4.c  from_LLeg_4_new.c  from_RLeg_1.c  from_RLeg_3.c  from_RLeg_3_new.c  from_RLeg_3_no_torso_rotation.c  from_RLeg_4.c  from_RLeg_4_new.c  igm.cpp  igm_versions.cpp  joint_bounds.cpp  joint_bounds.h  joint_state.cpp  maple_functions.h  model_state.cpp  posture_orientation.cpp  posture_orientation.h  test_igm_1.cpp  test_igm_2.cpp  test_igm_3.cpp  test_igm_3_1.cpp  test_igm_4.cpp  util.cpp
nao_model/MapleCodeGeneration/: Leg2EE.mpl  Readme_M.txt  from_LLeg_1.mpl  from_LLeg_2.mpl  from_LLeg_3.mpl  from_LLeg_3_new.mpl  from_LLeg_3_no_torso_rotation.mpl  from_RLeg_1.mpl  from_RLeg_1_new.mpl  from_RLeg_2.mpl  from_RLeg_3.mpl  from_RLeg_3_new.mpl  from_RLeg_3_no_torso_rotation.mpl  from_RLeg_4.mpl  main_NAO.mw  tmp.mw
